# sparta-solar

./: .gitignore  CHANGELOG.md  Makefile  README.md  hf_dataset_card.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
.ipython/: history.sqlite
.ipython/startup/: 00_import.py
assets/: README.md
dev/: testdev.py
docs/: about.md  api.md  configuration.md  index.md  installation.md  logging.md  quick-reference.md  quickstart.md  user-guide.md
docs/api/: atmos.md  crsdata.md  main.md  models.md  utils.md
docs/stylesheets/: extra.css
overrides/partials/: logo.html
reports/: junit.xml
scripts/: blosc2_to_zarr.py  country_capitals.py  create_env.py  hfh_upload_merra2_daily.py
src/pysparta/: __init__.py  atmosphere.py  config.py  logtools.py  validation.py
src/pysparta/atmoslib/: __init__.py  _base.py  crs_sodaapi.py  custom.py  merra2_cda.py  merra2_daily.py  merra2_geeapi.py  merra2_lta.py
src/pysparta/modlib/: bird.py  sparta.py
src/spartasolar/: __init__.py  atmosphere.py  config.py  logtools.py  validation.py
src/spartasolar/atmoslib/: __init__.py  _base.py  conversions.py  crs_sodaapi.py  custom.py  helpers.py  merra2_cda.py  merra2_daily.py  merra2_geeapi.py  merra2_lta.py
src/spartasolar/modlib/: __init__.py  bird.py  sandbox.py  sparta.py
tests/: README.md  __init__.py  conftest.py
tests/data/: README.md
tests/data/crs_soda/: crs_soda_mcclear_v1.0.0_375000N_35000W_2015.parquet
tests/data/merra2_gee/: merra2_gee_hourly_375000N_35000W_2015.parquet
tests/integration/: test_model_consistency.py
tests/unit/: test_bird.py  test_config.py  test_crs_sodaapi.py  test_merra2_daily.py  test_merra2_geeapi.py  test_sparta.py  test_validation.py
