[build-system]
requires = ["uv-build>=0.7.19"]
build-backend = "uv_build"

[project]
name = "sparta-solar"
version = "0.1.0"
description = "Solar PArameterization for the Radiative Transfer of the Atmosphere"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Jose A Ruiz-Arias", email = "jararias@uma.es"}]
license = {text = "CC BY-NC-SA 4.0"}
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/jararias/sparta-solar"}


dependencies = [
    "blosc2>=4.1.2",
    "dask[complete]>=2026.3.0",
    "huggingface-hub>=1.15.0",
    "loguru>=0.7.3",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "platformdirs>=4.9.6",
    "pyarrow>=24.0.0",
    "scipy>=1.17.1",
    "sunwhere>=1.4.0",
    "tomlkit>=0.15.0",
    "xarray>=2026.4.0",
    "zarr>=3.2.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pymdown-extensions>=10.21.2",
    "zensical>=0.0.41",
]

merra2-gee = [
    "earthengine-api>=1.7.26",
]

[dependency-groups]
dev = [
    "geoviews>=1.15.1",
    "hvplot>=0.12.2",
    "ipython>=9.13.0",
    "matplotlib>=3.10.9",
    "panel>=1.8.10",
    "pyqt6>=6.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
]

[tool.uv-build]
# Equivale a include-package-data = false en setuptools
# uv-build solo incluye archivos .py por defecto a menos que se especifique lo contrario
exclude = ["*"] 

[tool.uv.build-backend]
module-name = "spartasolar"

# Equivale a tool.setuptools.package-data
# Aquí incluimos explícitamente los archivos de datos deseados
include = [
    "spartasolar/atmoslib/merra2_lta_data/*.nc",
]

[tool.uv-build.targets.wheel]
# El paquete y el módulo tienen el mismo nombre
packages = ["spartasolar"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/spartasolar"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
